--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "caffeinated/shinobi": "^3.0"
     },
     "require-dev": {
-        "laravel/laravel": "^5.4",
+        "laravel/laravel": "~5.4|~5.5",
         "phpspec/phpspec": "^3.4",
         "phpunit/phpunit": "4.*",
         "orchestra/testbench": "^3.4",
